<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_contact"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="60dp"
                android:textColor="@color/colorwht"
                android:fontFamily="casual"
                android:textAllCaps="false"
                android:paddingBottom="45dp"
                android:id="@+id/addLogoTV"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/addLogoTV"
                android:id="@+id/details"
                >
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </ScrollView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:id="@+id/fullnameET"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789אבגדהוזחטיכלמנסעפצקרשתךםן"
                    android:layout_margin="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nick_name"
                    android:id="@+id/nicknameET"
                    android:maxLines="1"
                    android:gravity="center"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789אבגדהוזחטיכלמנסעפצקרשתךםן"
                    android:textSize="25sp"
                    android:layout_margin="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:id="@+id/emailET"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@."
                    android:layout_margin="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/phone_number"
                    android:id="@+id/phoneET"
                    android:maxLines="1"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:layout_margin="15dp"/>



            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentBottom="true">

                <ImageButton
                    android:id="@+id/okIB"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/botton_btn"
                    android:src="@drawable/oknopress"
                    android:layout_weight="1"
                    />
                <ImageButton
                    android:id="@+id/notokIB"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/botton_btn"
                    android:src="@drawable/notnopress"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </RelativeLayout>

</LinearLayout>