<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
 >

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="90dp"
                android:textColor="@color/colorwht"
                android:fontFamily="cursive"
                android:textAllCaps="false"
                android:paddingTop="50dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:gravity="center"
                android:paddingTop="50dp"
                android:text="@string/full_about"
                android:textAllCaps="false"
                android:textColor="@color/colorwht"
                android:textSize="35dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fa"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/bck_btn"
                android:layout_width="350dp"
                android:layout_marginTop="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btns"
                android:text="@string/bck_main"
                android:textColor="@color/colorwht"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAllCaps="true"
                android:fontFamily="casual"
                android:layout_margin="10dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>