<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LL_list"
        >


        <ImageButton
            android:layout_width="200dip"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_height="200dip"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="30sp"
            android:src="@drawable/add"
            android:background="@color/colorBG"
            android:id="@+id/profile_pic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/profile_pic"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/profile_pic"
                android:id="@+id/numberLL">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:text="Phone number:"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_phoneTV"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:inputType="phone"
                    android:layout_marginLeft="30sp"
                    android:textStyle="bold"
                    android:text="@string/def_number"
                    android:textSize="19dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/numberLL"
                android:id="@+id/nameLL">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Name:"
                    android:textSize="19dp"
                    android:textColor="#000"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_nameTV"
                    android:textColor="#000"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="30sp"
                    android:textStyle="bold"
                    android:text="@string/def_name"
                    android:textSize="19dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/nameLL"
                android:id="@+id/nickLL">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Nick:"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nick_nameTV"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:layout_marginLeft="30sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="@string/def_nick"
                    android:textSize="19dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/nickLL"
                android:id="@+id/emailLL">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Email:"
                    android:textSize="19dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailTV"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="@string/def_email"
                    android:textSize="19dp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/backIB"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/botton_btn"
                android:src="@drawable/backnopress"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/take_date"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/botton_btn"
                android:src="@drawable/datenpressed"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/send_sms"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/botton_btn"
                android:src="@drawable/smsnopress"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/take_call"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/botton_btn"
                android:src="@drawable/phonenpress"
                android:layout_weight="1"
                />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>